--- a/core/templates/core/child_form.html
+++ b/core/templates/core/child_form.html
@@ -1,28 +1,29 @@
 {% extends 'babybuddy/page.html' %}
+{% load i18n %}
 
 {% block title %}
     {% if object %}
         {{ object }}
     {% else %}
-        Add a Child
+        {% trans "Add a Child" %}
     {% endif %}
 {% endblock %}
 
 {% block breadcrumbs %}
-    <li class="breadcrumb-item"><a href="{% url 'core:child-list' %}">Children</a></li>
+    <li class="breadcrumb-item"><a href="{% url 'core:child-list' %}">{% trans "Children" %}</a></li>
     {% if object %}
         <li class="breadcrumb-item font-weight-bold"><a href="{% url 'core:child' object.slug %}">{{ object }}</a></li>
-        <li class="breadcrumb-item active" aria-current="page">Update</li>
+        <li class="breadcrumb-item active" aria-current="page">{% trans "Update" %}</li>
     {% else %}
-        <li class="breadcrumb-item active" aria-current="page">Add a Child</li>
+        <li class="breadcrumb-item active" aria-current="page">{% trans "Add a Child" %}</li>
     {% endif %}
 {% endblock %}
 
 {% block content %}
     {% if object %}
-        <h1>Update <span class="text-info">{{ object }}</span></h1>
+        {% blocktrans %}<h1>Update <span class="text-info">{{ object }}</span></h1>{% endblocktrans %}
     {% else %}
-        <h1>Add a Child</h1>
+        <h1>{% trans "Add a Child" %}</h1>
     {% endif %}
     {% include 'babybuddy/form.html' %}
 {% endblock %}
