--- a/core/templates/core/child_detail.html
+++ b/core/templates/core/child_detail.html
@@ -1,10 +1,10 @@
 {% extends 'babybuddy/page.html' %}
-{% load static thumbnail %}
+{% load i18n static thumbnail %}
 
 {% block title %}{{ object }}{% endblock %}
 
 {% block breadcrumbs %}
-    <li class="breadcrumb-item"><a href="{% url 'core:child-list' %}">Children</a></li>
+    <li class="breadcrumb-item"><a href="{% url 'core:child-list' %}">{% trans "Children" %}</a></li>
     <li class="breadcrumb-item font-weight-bold">{{ object }}</li>
 {% endblock %}
 
@@ -20,8 +20,8 @@
                 {% endif %}
                 <div class="child-name display-4">{{ object }}</div>
                 <p class="lead">
-                    Born <span class="text-secondary">{{ object.birth_date }}</span><br/>
-                    Age <span class="text-secondary">{{ object.birth_date|timesince }}</span>
+                    {% trans "Born" %} <span class="text-secondary">{{ object.birth_date }}</span><br/>
+                    {% trans "Age" %} <span class="text-secondary">{{ object.birth_date|timesince }}</span>
                 </p>
                 {% include 'dashboard/child_button_group.html' %}
             </div>
@@ -31,16 +31,16 @@
         <div class="col-lg-8 offset-lg-4 col-md-6 offset-md-6">
             <h3 class="text-center">
                 {% if date_previous %}
-                    <a class="btn btn-sm btn-default" href="?date={{ date_previous|date:"Y-m-d" }}" aria-label="Previous">
+                    <a class="btn btn-sm btn-default" href="?date={{ date_previous|date:"Y-m-d" }}" aria-label="{% trans "Previous" %}">
                         <i class="icon icon-chevron-left" aria-hidden="true"></i>
-                        <span class="sr-only">Previous</span>
+                        <span class="sr-only">{% trans "Previous" %}</span>
                     </a>
                 {% endif %}
                 {{ date|date }}
                 {% if date_next %}
-                    <a class="btn btn-sm btn-default" href="?date={{ date_next|date:"Y-m-d" }}" aria-label="Next">
+                    <a class="btn btn-sm btn-default" href="?date={{ date_next|date:"Y-m-d" }}" aria-label="{% trans "Next" %}">
                         <i class="icon icon-chevron-right" aria-hidden="true"></i>
-                        <span class="sr-only">Next</span>
+                        <span class="sr-only">{% trans "Next" %}</span>
                     </a>
                 {% endif %}
             </h3>
