--- a/core/templates/core/diaperchange_list.html
+++ b/core/templates/core/diaperchange_list.html
@@ -1,26 +1,25 @@
 {% extends 'babybuddy/page.html' %}
-{% load widget_tweaks %}
-{% load bootstrap %}
+{% load bootstrap i18n widget_tweaks %}
 
-{% block title %}Diaper Changes{% endblock %}
+{% block title %}{% trans "Diaper Changes" %}{% endblock %}
 
 {% block breadcrumbs %}
-    <li class="breadcrumb-item active" aria-current="page">Diaper Changes</li>
+    <li class="breadcrumb-item active" aria-current="page">{% trans "Diaper Changes" %}</li>
 {% endblock %}
 
 {% block content %}
-    <h1>Diaper Changes</h1>
+    <h1>{% trans "Diaper Changes" %}</h1>
     {% include 'babybuddy/filter.html' %}
     <div class="table-responsive">
         <table class="table table-striped table-hover">
             <thead class="thead-inverse">
                 <tr>
-                    <th>Child</th>
-                    <th class="text-center">Wet</th>
-                    <th class="text-center">Solid</th>
-                    <th>Color</th>
-                    <th>Time</th>
-                    <th class="text-center">Actions</th>
+                    <th>{% trans "Child" %}</th>
+                    <th class="text-center">{% trans "Wet" %}</th>
+                    <th class="text-center">{% trans "Solid" %}</th>
+                    <th>{% trans "Color" %}</th>
+                    <th>{% trans "Time" %}</th>
+                    <th class="text-center">{% trans "Actions" %}</th>
                 </tr>
             </thead>
             <tbody>
@@ -32,7 +31,7 @@
                         <td>{{ change.color }}</td>
                         <td>{{ change.time|date:'n/j/y G:i' }}</td>
                         <td class="text-center">
-                            <div class="btn-group btn-group-sm" role="group" aria-label="Actions">
+                            <div class="btn-group btn-group-sm" role="group" aria-label="{% trans "Actions" %}">
 
                                 {% if perms.core.change_diaperchange %}
                                     <a href="{% url 'core:diaperchange-update' change.id %}" class="btn btn-primary">
@@ -51,7 +50,7 @@
                     </tr>
                 {% empty %}
                     <tr>
-                        <th colspan="6">No diaper changes found.</th>
+                        <th colspan="6">{% trans "No diaper changes found." %}</th>
                     </tr>
                 {% endfor %}
             </tbody>
@@ -61,7 +60,7 @@
 
     {% if perms.core.add_diaperchange %}
         <a href="{% url 'core:diaperchange-add' %}" class="btn btn-sm btn-success">
-            <i class="icon icon-diaperchange" aria-hidden="true"></i> Add a Change
+            <i class="icon icon-diaperchange" aria-hidden="true"></i> {% trans "Add a Change" %}
         </a>
     {% endif %}
 
