--- a/core/templates/core/weight_form.html
+++ b/core/templates/core/weight_form.html
@@ -1,27 +1,28 @@
 {% extends 'babybuddy/page.html' %}
+{% load i18n %}
 
 {% block title %}
     {% if object %}
         {{ object }}
     {% else %}
-        Add a Weight Entry
+        {% trans "Add a Weight Entry" %}
     {% endif %}
 {% endblock %}
 
 {% block breadcrumbs %}
-    <li class="breadcrumb-item"><a href="{% url 'core:weight-list' %}">Weight</a></li>
+    <li class="breadcrumb-item"><a href="{% url 'core:weight-list' %}">{% trans "Weight" %}</a></li>
     {% if object %}
-        <li class="breadcrumb-item active" aria-current="page">Update</li>
+        <li class="breadcrumb-item active" aria-current="page">{% trans "Update" %}</li>
     {% else %}
-        <li class="breadcrumb-item active" aria-current="page">Add a Weight Entry</li>
+        <li class="breadcrumb-item active" aria-current="page">{% trans "Add a Weight Entry" %}</li>
     {% endif %}
 {% endblock %}
 
 {% block content %}
     {% if object %}
-        <h1>Update <span class="text-info">{{ object }}</span></h1>
+        {% blocktrans %}<h1>Update <span class="text-info">{{ object }}</span></h1>{% endblocktrans %}
     {% else %}
-        <h1>Add a Weight Entry</h1>
+        <h1>{% trans "Add a Weight Entry" %}</h1>
     {% endif %}
     {% include 'babybuddy/form.html' %}
 {% endblock %}
