--- a/core/templates/core/weight_list.html
+++ b/core/templates/core/weight_list.html
@@ -1,10 +1,10 @@
 {% extends 'babybuddy/page.html' %}
-{% load widget_tweaks %}
+{% load i18n widget_tweaks %}
 
-{% block title %}Weight{% endblock %}
+{% block title %}{% trans "Weight" %}{% endblock %}
 
 {% block breadcrumbs %}
-    <li class="breadcrumb-item active" aria-current="page">Weight</li>
+    <li class="breadcrumb-item active" aria-current="page">{% trans "Weight" %}</li>
 {% endblock %}
 
 {% block content %}
@@ -14,10 +14,10 @@
         <table class="table table-striped table-hover">
             <thead class="thead-inverse">
                 <tr>
-                    <th>Child</th>
-                    <th>Weight</th>
-                    <th>Date</th>
-                    <th class="text-center">Actions</th>
+                    <th>{% trans "Child" %}</th>
+                    <th>{% trans "Weight" %}</th>
+                    <th>{% trans "Date" %}</th>
+                    <th class="text-center">{% trans "Actions" %}</th>
                 </tr>
             </thead>
             <tbody>
@@ -27,7 +27,7 @@
                         <td>{{ object.weight }}</td>
                         <td>{{ object.date }}</td>
                         <td class="text-center">
-                            <div class="btn-group btn-group-sm" role="group" aria-label="Actions">
+                            <div class="btn-group btn-group-sm" role="group" aria-label="{% trans "Actions" %}">
 
                                 {% if perms.core.change_weight %}
                                     <a href="{% url 'core:weight-update' object.id %}" class="btn btn-primary">
@@ -46,7 +46,7 @@
                     </tr>
                 {% empty %}
                     <tr>
-                        <th colspan="4">No weight entries found.</th>
+                        <th colspan="4">{% trans "No weight entries found." %}</th>
                     </tr>
                 {% endfor %}
             </tbody>
@@ -56,7 +56,7 @@
 
     {% if perms.core.add_weight %}
         <a href="{% url 'core:weight-add' %}" class="btn btn-sm btn-success">
-            <i class="icon icon-weight" aria-hidden="true"></i> Add a Weight Entry
+            <i class="icon icon-weight" aria-hidden="true"></i> {% trans "Add a Weight Entry" %}
         </a>
     {% endif %}
 
