--- a/dashboard/templates/cards/tummytime_day.html
+++ b/dashboard/templates/cards/tummytime_day.html
@@ -1,14 +1,14 @@
 {% extends 'cards/base.html' %}
-{% load duration %}
+{% load duration i18n %}
 
-{% block header %}Today's Tummy Time{% endblock %}
+{% block header %}{% trans "Today's Tummy Time" %}{% endblock %}
 
 {% block title %}
     {% if stats.count > 0 %}
         {{ stats.total|duration_string }}
     {% else %}
         <i class="icon icon-sad" aria-hidden="true"></i>
-        None yet today
+        {% trans "None yet today" %}
         <i class="icon icon-sad" aria-hidden="true"></i>
     {% endif %}
 {% endblock %}
@@ -16,7 +16,9 @@
 {% block listgroup %}
     <ul class="list-group list-group-flush text-muted small">
     {% for instance in instances %}
-        <li class="list-group-item">{{ instance.duration|duration_string }} at {{ instance.end|time }}</li>
+        <li class="list-group-item">
+            {% blocktrans %}{{ instance.duration|duration_string }} at {{ instance.end|time }}{% endblocktrans %}
+        </li>
     {% endfor %}
     </ul>
 {% endblock %}
