--- a/dashboard/templates/cards/timer_list.html
+++ b/dashboard/templates/cards/timer_list.html
@@ -1,10 +1,11 @@
 {% extends 'cards/base.html' %}
+{% load i18n %}
 
-{% block header %}Active Timers{% endblock %}
+{% block header %}{% trans "Active Timers" %}{% endblock %}
 
 {% block title %}
     {% with instances|length as count %}
-        {{ count }} active timer{{ count|pluralize }}
+        {% blocktrans %}{{ count }} active timer{{ count|pluralize }}{% endblocktrans %}
     {% endwith %}
 {% endblock %}
 
@@ -13,7 +14,10 @@
     {% for instance in instances %}
         <a href="{% url 'core:timer-detail' instance.id %}"
            class="list-group-item list-group-item-action">
-            <strong>{{ instance }}</strong> <p class="text-muted small m-0">Started by {{ instance.user }} at {{ instance.start|time }}</p>
+            <strong>{{ instance }}</strong>
+            <p class="text-muted small m-0">
+                {% blocktrans %}Started by {{ instance.user }} at {{ instance.start|time }}{% endblocktrans %}
+            </p>
         </a>
     {% endfor %}
     </ul>
