--- a/dashboard/templates/cards/feeding_last.html
+++ b/dashboard/templates/cards/feeding_last.html
@@ -5,7 +5,7 @@
 
 {% block title %}
     {% if feeding %}
-        {% blocktrans %}{{ feeding.end|timesince }} ago{% endblocktrans %}
+        {% blocktrans with time=feeding.end|timesince %}{{ time }} ago{% endblocktrans %}
     {% else %}
         {% trans "Never" %}
     {% endif %}
