--- a/dashboard/templates/cards/sleep_last.html
+++ b/dashboard/templates/cards/sleep_last.html
@@ -5,7 +5,7 @@
 
 {% block title %}
     {% if sleep %}
-        {% blocktrans %}{{ sleep.end|timesince }} ago{% endblocktrans %}
+        {% blocktrans with time=sleep.end|timesince %}{{ time }} ago{% endblocktrans %}
     {% else %}
         {% trans "Never" %}
     {% endif %}
