--- a/dashboard/templates/cards/tummytime_last.html
+++ b/dashboard/templates/cards/tummytime_last.html
@@ -5,7 +5,7 @@
 
 {% block title %}
     {% if tummytime %}
-        {% blocktrans %}{{ tummytime.time|timesince }} ago{% endblocktrans %}
+        {% blocktrans with time=tummytime.time|timesince %}{{ time }} ago{% endblocktrans %}
     {% else %}
         {% trans "Never" %}
     {% endif %}
